external-crates/move/crates/move-compiler/tests/move_2024/parser/global_access_exists_invalid.exp
error[E01003]: invalid modifier
  ┌─ tests/move_2024/parser/global_access_exists_invalid.move:2:5
  │
2 │     struct R {}
  │     ^^^^^^ Invalid struct declaration. Internal struct declarations are not yet supported
  │
  = Visibility annotations are required on struct declarations from the Move 2024 edition onwards.

error[E01002]: unexpected token
   ┌─ tests/move_2024/parser/global_access_exists_invalid.move:13:26
   │
13 │         let _ : bool = ::exists<Self::R>(0x0);
   │                          ^^^^^^ Expected '::' after the address in this module access chain
   │
   = Access chains that start with '::' must be one of the following forms: 
       '::<address>::<module>', '::<address>::<module>::<member>'

